// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render coupon cell 1`] = `
<div class="van-cell van-cell--clickable van-coupon-cell">
  <div class="van-cell__title"><span>优惠券</span></div>
  <div class="van-cell__value"><span>使用优惠</span></div><i class="van-icon van-icon-arrow van-cell__right-icon">
    <!----></i>
</div>
`;

exports[`render coupon cell with coupon 1`] = `
<div class="van-cell van-cell--clickable van-coupon-cell">
  <div class="van-cell__title"><span>优惠券</span></div>
  <div class="van-cell__value van-coupon-cell--selected"><span>-¥1.00</span></div><i class="van-icon van-icon-arrow van-cell__right-icon">
    <!----></i>
</div>
`;

exports[`render coupon list 1`] = `
<div class="van-coupon-list">
  <div class="van-cell van-cell--borderless van-field van-coupon-list__field">
    <div class="van-cell__value van-cell__value--alone">
      <div class="van-field__body"><input type="text" placeholder="请输入优惠码" maxlength="20" class="van-field__control">
        <div class="van-field__button"><button disabled="disabled" class="van-button van-button--danger van-button--small van-button--disabled van-coupon-list__exchange"><span class="van-button__text">兑换</span></button></div>
      </div>
    </div>
  </div>
  <div class="van-tabs van-tabs--line van-coupon-list__tab">
    <div class="van-tabs__wrap van-hairline--top-bottom">
      <div class="van-tabs__nav van-tabs__nav--line">
        <div class="van-tabs__line" style="width: 120px; transform: translateX(-60px);"></div>
        <div class="van-tab van-tab--active"><span class="van-ellipsis">可使用优惠券 (6)</span></div>
        <div class="van-tab"><span class="van-ellipsis">不可使用优惠券 (2)</span></div>
      </div>
    </div>
    <div class="van-tabs__content">
      <div class="van-tab__pane" style="">
        <div class="van-coupon-list__list" style="height: 628px;">
          <div class="van-coupon">
            <div class="van-coupon__content">
              <div class="van-coupon__head">
                <h2></h2>
                <p>无使用门槛</p>
              </div>
              <div class="van-coupon__body">
                <h2></h2>
                <p>有效期：2017.03.10 - 2017.12.30</p>
              </div>
            </div>
          </div>
          <div class="van-coupon">
            <div class="van-coupon__content">
              <div class="van-coupon__head">
                <h2><span>¥</span> 1.5</h2>
                <p>无使用门槛</p>
              </div>
              <div class="van-coupon__body">
                <h2>name</h2>
                <p>有效期：2017.03.10 - 2017.12.30</p>
                <div class="van-checkbox van-coupon__corner">
                  <div class="van-checkbox__icon van-checkbox__icon--round van-checkbox__icon--checked"><i class="van-icon van-icon-success">
                      <!----></i></div>
                </div>
              </div>
            </div>
            <p class="van-coupon__description">description</p>
          </div>
          <div class="van-coupon">
            <div class="van-coupon__content">
              <div class="van-coupon__head">
                <h2><span>¥</span> 1</h2>
                <p>无使用门槛</p>
              </div>
              <div class="van-coupon__body">
                <h2>name</h2>
                <p>有效期：2017.03.10 - 2017.12.30</p>
              </div>
            </div>
            <p class="van-coupon__description">description</p>
          </div>
          <div class="van-coupon">
            <div class="van-coupon__content">
              <div class="van-coupon__head">
                <h2><span>¥</span> 1.23</h2>
                <p>无使用门槛</p>
              </div>
              <div class="van-coupon__body">
                <h2>name</h2>
                <p>有效期：2017.03.10 - 2017.12.30</p>
              </div>
            </div>
            <p class="van-coupon__description">description</p>
          </div>
          <div class="van-coupon">
            <div class="van-coupon__content">
              <div class="van-coupon__head">
                <h2>8.8折</h2>
                <p>满0.50元可用</p>
              </div>
              <div class="van-coupon__body">
                <h2>name</h2>
                <p>有效期：2017.03.10 - 2017.12.30</p>
              </div>
            </div>
          </div>
          <div class="van-coupon">
            <div class="van-coupon__content">
              <div class="van-coupon__head">
                <h2>9折</h2>
                <p>满0.50元可用</p>
              </div>
              <div class="van-coupon__body">
                <h2>name</h2>
                <p>有效期：2017.03.10 - 2017.12.30</p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="van-tab__pane" style="display: none;">
        <!---->
      </div>
    </div>
  </div><button class="van-button van-button--default van-button--large van-coupon-list__close"><span class="van-button__text">不使用优惠</span></button>
</div>
`;

exports[`render disabled coupon 1`] = `
<div class="van-coupon van-coupon--disabled">
  <div class="van-coupon__content">
    <div class="van-coupon__head">
      <h2><span>¥</span> 1.5</h2>
      <p>无使用门槛</p>
    </div>
    <div class="van-coupon__body">
      <h2>name</h2>
      <p>有效期：2017.03.10 - 2017.12.30</p>
    </div>
  </div>
  <p class="van-coupon__description">reason</p>
</div>
`;

exports[`render empty coupon list 1`] = `
<div class="van-coupon-list">
  <div class="van-cell van-cell--borderless van-field van-coupon-list__field">
    <div class="van-cell__value van-cell__value--alone">
      <div class="van-field__body"><input type="text" placeholder="请输入优惠码" maxlength="20" class="van-field__control">
        <div class="van-field__button"><button disabled="disabled" class="van-button van-button--danger van-button--small van-button--disabled van-coupon-list__exchange"><span class="van-button__text">兑换</span></button></div>
      </div>
    </div>
  </div>
  <div class="van-tabs van-tabs--line van-coupon-list__tab">
    <div class="van-tabs__wrap van-hairline--top-bottom">
      <div class="van-tabs__nav van-tabs__nav--line">
        <div class="van-tabs__line"></div>
        <div class="van-tab"><span class="van-ellipsis">可使用优惠券 (0)</span></div>
        <div class="van-tab van-tab--active"><span class="van-ellipsis">不可使用优惠券 (0)</span></div>
      </div>
    </div>
    <div class="van-tabs__content">
      <div class="van-tab__pane" style="display: none;">
        <div class="van-coupon-list__list" style="height: 628px;">
          <div class="van-coupon-list__empty"><img src="https://img.yzcdn.cn/vant/coupon-empty.png">
            <p>暂无优惠券</p>
          </div>
        </div>
      </div>
      <div class="van-tab__pane" style="">
        <div class="van-coupon-list__list" style="height: 628px;">
          <div class="van-coupon-list__empty"><img src="https://img.yzcdn.cn/vant/coupon-empty.png">
            <p>暂无优惠券</p>
          </div>
        </div>
      </div>
    </div>
  </div><button class="van-button van-button--default van-button--large van-coupon-list__close"><span class="van-button__text">不使用优惠</span></button>
</div>
`;
